[gd_scene load_steps=9 format=3 uid="uid://drylow4dc4o3f"]

[ext_resource type="Script" uid="uid://6b2cexsfwgwn" path="res://Scripts/ui/hel_sta_bars.gd" id="1_0lv2c"]
[ext_resource type="Texture2D" uid="uid://dcono1pipel3q" path="res://Assets/ui/hp_inside.png" id="2_wagrs"]
[ext_resource type="Texture2D" uid="uid://240tbxttfhkc" path="res://Assets/ui/hp_outside.png" id="3_fauln"]
[ext_resource type="Texture2D" uid="uid://boxikeqcr5eoq" path="res://Assets/ui/stam_inside.png" id="4_wagrs"]
[ext_resource type="Texture2D" uid="uid://dq8knos66o8ki" path="res://Assets/ui/textframe.png" id="5_6lhcu"]
[ext_resource type="Texture2D" uid="uid://dtecdqdesqda0" path="res://Assets/ui/stam_outside.png" id="5_fauln"]
[ext_resource type="FontFile" uid="uid://b2d7ii78bv5cw" path="res://Assets/font/Long_Shot.ttf" id="7_wjitq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f00il"]
texture = ExtResource("5_6lhcu")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -952.0
offset_bottom = -448.0
grow_horizontal = 2
grow_vertical = 2
rotation = 6.28319
pivot_offset = Vector2(100, 100)
script = ExtResource("1_0lv2c")

[node name="hp_bar" type="TextureProgressBar" parent="."]
show_behind_parent = true
layout_mode = 0
offset_right = 200.0
offset_bottom = 200.0
max_value = 500.0
value = 500.0
fill_mode = 4
texture_under = ExtResource("2_wagrs")
texture_over = ExtResource("3_fauln")
texture_progress = ExtResource("2_wagrs")
tint_under = Color(0.419, 0.09, 0.137, 1)
tint_progress = Color(0.320985, 0.657838, 0.215516, 1)

[node name="stam_bar" type="TextureProgressBar" parent="."]
show_behind_parent = true
layout_mode = 0
offset_right = 200.0
offset_bottom = 200.0
step = 0.01
value = 100.0
fill_mode = 4
stretch_margin_left = 10
stretch_margin_top = 10
stretch_margin_right = 10
stretch_margin_bottom = 10
texture_under = ExtResource("4_wagrs")
texture_over = ExtResource("5_fauln")
texture_progress = ExtResource("4_wagrs")
tint_under = Color(0.23, 0.23, 0.23, 1)
tint_progress = Color(0.85, 0.631833, 0.1955, 1)

[node name="button_show" type="Panel" parent="."]
layout_mode = 0
offset_left = 195.0
offset_top = 5.0
offset_right = 253.0
offset_bottom = 45.0
pivot_offset = Vector2(21, 21)
theme_override_styles/panel = SubResource("StyleBoxTexture_f00il")

[node name="input_name_lbl" type="Label" parent="button_show"]
layout_mode = 0
offset_left = 3.0
offset_top = 6.0
offset_right = 57.0
offset_bottom = 41.0
theme_override_fonts/font = ExtResource("7_wjitq")
theme_override_font_sizes/font_size = 33
text = "Shift"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="value_changed" from="hp_bar" to="." method="_on_hp_bar_value_changed"]
[connection signal="value_changed" from="stam_bar" to="." method="_on_stam_bar_value_changed"]
